# fidel-ai

./: .env.example  .gitignore  README.md  compose-gpu.yml  compose.yml  pyproject.toml
app/: api.py  chat_format.py  config.py  deps.py  inference.py  logging.py  main.py  schemas.py  sse.py  utils.py
app/models/: list.json
app/models/fidel-chat-v1-125M/: metadata-lora.json  metadata.json  model.py
app/tokenizers/: amharic-bpe-tokenizer-25k.vocab
docker/: Dockerfile.cpu  Dockerfile.cuda  entrypoint.sh  gunicorn_conf.py
